--- a/main.css
+++ b/main.css
@@ -252,22 +252,35 @@ h1, h2, p, li, .footer {
   color: #ebeced;
 }
 
-h1 {
+h1, h2, h3, h4 {
   font-size:max(2vw, 25px);
-  font-weight:1000;
+  font-weight:800;
   line-height: 100%;
   margin: 0px 15px 0px 0px; /* top right bottom left*/
   text-align: left;
   text-transform: uppercase;
 }
 
+h1 {
+  margin-top: 8%;
+}
+
 h2 {
-  font-size:max(1.8vw, 20px);
-  font-weight: 800;
-  line-height: 100%;
+  font-size:max(1.6vw, 20px);
   margin: 5% 15px 10px 0px; /* top right bottom left*/
-  width: 80%;
-  text-align: justify;
+  width: 70%;
+}
+
+h3 {
+  font-size:max(1vw, 20px);
+  margin: 5% 15px 10px 0px; /* top right bottom left*/
+  width: 70%;
+}
+
+h4 {
+  font-size:max(0.5vw, 15px);
+  margin: 5% 15px 10px 5%; /* top right bottom left*/
+  width: 70%;
 }
 
 p, li {
@@ -299,9 +312,14 @@ a:hover {
   margin: 2% 1px 2% 15%;
 }
 
-.link a:link { color: #3562ab; font-family: 'Raleway',sans-serif; font-size: 25px; font-weight: 600; line-height: 25px; text-align: left; margin: auto; display: list-item;list-style-type: disc; margin-left: 5%; margin-top: 0px;}
-.link a:visited {color: #152e57; font-family: font-family: 'Raleway',sans-serif; font-size: 26px; line-height: 25px; text-align: left; margin: auto; display: list-item;list-style-type: disc; margin-left: 5%; margin-top: 0px;}
+.link a:link { color: #3562ab; font-size: 25px; font-weight: 600; line-height: 25px; text-align: left; margin: auto; display: list-item;list-style-type: disc; margin-left: 5%; margin-top: 0px;}
+.link a:visited {color: #152e57; font-size: 26px; line-height: 25px; text-align: left; margin: auto; display: list-item;list-style-type: disc; margin-left: 5%; margin-top: 0px;}
 
+.git_asset {
+  font-size: 60%;
+  margin-left: 8%;
+  line-height: 1;
+}
 
 .entry-content { border-bottom: 3px solid #666; padding: 0 0 15px 0; margin: 5%; }
 
