--- a/main.css
+++ b/main.css
@@ -175,6 +175,11 @@ body{
   color: #ebeced;
 }
 
+.main_iframe{
+  width:40%;
+  height:22vh;
+}
+
 .contact_view{
   display: table;
   align-content: center;
@@ -278,13 +283,14 @@ h3 {
 }
 
 h4 {
-  font-size:max(0.5vw, 15px);
+  font-size:120%;
+  /*font-size:max(0.5vw, 15px);*/
   margin: 5% 15px 10px 5%; /* top right bottom left*/
   width: 70%;
 }
 
 p, li {
-  font-size:max(1.3vw, 15px);
+  font-size:100%;
   font-weight: 300;
   line-height: 1.3;
   margin-bottom: 10px;
