--- a/main.css
+++ b/main.css
@@ -100,6 +100,30 @@ body{
 }
 
 
+#pictures_grid {
+  /*display:grid;*/
+  grid-template-columns: 1fr 1fr 1fr;
+  justify-items: center;
+  gap: 10px 10px ;
+  
+}
+
+.grid_picture{
+  width: 25%;
+  border: 4px solid;
+  border-color: rgba(4,13,25,1);
+  
+}
+
+.grid_picture:hover{
+  transform: scale(1.7);
+  -webkit-transition-duration: 0.5s;
+  -moz-transition-duration: 0.5s;
+  -o-transition-duration: 0.5s;
+  transition-duration: 0.5s;
+   z-index: 3;
+}
+
 /*MAIN GRID*/
 .main_grid{
   display:grid;
