--- a/main.css
+++ b/main.css
@@ -1,4 +1,12 @@
 
+:root {
+  --p_font_size: calc(0.6vw + 12px);
+  --h4_font_size: calc(var(--p_font_size) + 5px);
+  --h3_font_size: calc(var(--p_font_size) + 10px);
+  --h2_font_size: calc(var(--p_font_size) + 12px);
+  --h1_font_size: calc(var(--p_font_size) + 25px);
+}
+
 body{
   font-family: serif,monospace;
   color: #ebeced;
@@ -294,7 +302,6 @@ h1, h2, p, li, .footer {
 }
 
 h1, h2, h3, h4 {
-  font-size:max(2vw, 25px);
   font-weight:800;
   line-height: 100%;
   margin: 0px 15px 0px 0px; /* top right bottom left*/
@@ -303,30 +310,31 @@ h1, h2, h3, h4 {
 }
 
 h1 {
+  font-size: var(--h1_font_size);
   margin-top: 8%;
 }
 
 h2 {
-  font-size:max(1.6vw, 20px);
+  /*font-size:max(1.6vw, 20px);*/
+  font-size: var(--h2_font_size);
   margin: 5% 15px 10px 0px; /* top right bottom left*/
   width: 70%;
 }
 
 h3 {
-  font-size:max(1vw, 20px);
+  font-size: var(--h3_font_size);
   margin: 5% 15px 10px 0px; /* top right bottom left*/
   width: 70%;
 }
 
 h4 {
-  font-size:120%;
-  /*font-size:max(0.5vw, 15px);*/
+  font-size: var(--h4_font_size);
   margin: 5% 15px 10px 5%; /* top right bottom left*/
   width: 70%;
 }
 
 p, li {
-  font-size:1vw;
+  font-size:var(--p_font_size);
   font-weight: 300;
   line-height: 1.3;
   margin-bottom: 10px;
